Adicionada página de Indicadores Financeiros

--- a/notebooks/dados_estatisticos.ipynb
+++ b/notebooks/dados_estatisticos.ipynb
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "84c50bb2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('anac_dados_estatisticos.csv', index=False)"
+    "df.to_csv('../data/anac_dados_estatisticos.csv', index=False)"
    ]
   }
  ],
